Noen forenklinger/forbedringer i bruk av tidslinjer