@@ -2,7 +2,6 @@ package no.nav.k9.sak.ytelse.frisinn.vilkår;
 
 import java.util.Collections;
 import java.util.NavigableSet;
-import java.util.TreeSet;
 import java.util.stream.Collectors;
 
 import no.nav.fpsak.tidsserie.LocalDateSegment;
@@ -29,13 +28,8 @@ class SøktePerioder implements VilkårsPeriodiseringsFunksjon {
             return Collections.emptyNavigableSet();
         } else {
             var perioder = søknadsperioder.map(Søknadsperioder::getPerioder).orElse(Collections.emptySet()).stream().map(Søknadsperiode::getPeriode).collect(Collectors.toSet());
-
-            var timeline = new LocalDateTimeline<>(perioder.stream().map(a -> new LocalDateSegment<>(a.getFomDato(), a.getTomDato(), true)).collect(Collectors.toList())).compress();
-
-            return Collections.unmodifiableNavigableSet(timeline.toSegments()
-                .stream()
-                .map(segment -> DatoIntervallEntitet.fraOgMedTilOgMed(segment.getFom(), segment.getTom()))
-                .collect(Collectors.toCollection(TreeSet::new)));
+            var timeline = new LocalDateTimeline<>(perioder.stream().map(a -> new LocalDateSegment<>(a.getFomDato(), a.getTomDato(), true)).toList()).compress();
+            return DatoIntervallEntitet.fraTimeline(timeline);
         }
     }
 }
